docs/api/qiskit/2.0/circuit_classical.mdx
---
title: classical (v2.0)
description: API reference for qiskit.circuit.classical in qiskit v2.0
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.circuit.classical
---

<span id="module-qiskit.circuit.classical" />

<span id="qiskit-circuit-classical" />

<span id="classical-expressions-qiskit-circuit-classical" />

# Classical expressions

`qiskit.circuit.classical`

This module contains an exploratory representation of real-time operations on classical values during circuit execution.

Currently, only simple expressions on bits and registers that result in a Boolean value are supported, and these are only valid for use in the conditions of [`QuantumCircuit.if_test()`](qiskit.circuit.QuantumCircuit#if_test "qiskit.circuit.QuantumCircuit.if_test") ([`IfElseOp`](qiskit.circuit.IfElseOp "qiskit.circuit.IfElseOp")) and [`QuantumCircuit.while_loop()`](qiskit.circuit.QuantumCircuit#while_loop "qiskit.circuit.QuantumCircuit.while_loop") ([`WhileLoopOp`](qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp")), and in the target of [`QuantumCircuit.switch()`](qiskit.circuit.QuantumCircuit#switch "qiskit.circuit.QuantumCircuit.switch") ([`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp")).

<Admonition title="Note" type="note">
  This is an exploratory module, and while we will commit to the standard Qiskit deprecation policy within it, please be aware that the module will be deliberately limited in scope at the start, and early versions may not evolve cleanly into the final version. It is possible that various components of this module will be replaced (subject to deprecations) instead of improved into a new form.

  The type system and expression tree will be expanded over time, and it is possible that the allowed types of some operations may need to change between versions of Qiskit as the classical processing capabilities develop.
</Admonition>

<span id="module-qiskit.circuit.classical.expr" />

<span id="expressions-qiskit-circuit-classical-expr" />

## Expressions

`qiskit.circuit.classical.expr`

The necessary components for building expressions are all exported from the [`expr`](#module-qiskit.circuit.classical.expr "qiskit.circuit.classical.expr") namespace within [`qiskit.circuit.classical`](#module-qiskit.circuit.classical "qiskit.circuit.classical"), so you can choose whether to use qualified access (for example [`expr.Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.expr.Value")) or import the names you need directly and call them without the prefix.

There are two pathways for constructing expressions. The classes that form [the representation of the expression system](#circuit-classical-expressions-expr-representation) have constructors that perform zero type checking; it is up to the caller to ensure that they are building valid objects. For a more user-friendly interface to direct construction, there are helper functions associated with most of the classes that do type validation and inference. These are described below, in [Construction](#circuit-classical-expressions-expr-construction).

<span id="circuit-classical-expressions-expr-representation" />

### Representation

The expression system is based on tree representation. All nodes in the tree are final (uninheritable) instances of the abstract base class:

#### Expr

<Class id="qiskit.circuit.classical.expr.Expr" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L50-L83" signature="qiskit.circuit.classical.expr.Expr" modifiers="class">
  Bases: [`ABC`](https://docs.python.org/3/library/abc.html#abc.ABC "(in Python v3.13)")

  Root base class of all nodes in the expression tree. The base case should never be instantiated directly.

  This must not be subclassed by users; subclasses form the internal data of the representation of expressions, and it does not make sense to add more outside of Qiskit library code.

  All subclasses are responsible for setting their `type` attribute in their `__init__`, and should not call the parent initializer.
</Class>

These objects are mutable and should not be reused in a different location without a copy.

All :class\`Expr\` instances define a boolean `const` attribute, which indicates whether the expression can be evaluated at compile time. Most expression classes infer this during construction based on the const-ness of their operands.

The base for dynamic variables is the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var"), which can be either an arbitrarily typed real-time variable, or a wrapper around a [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") or [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister").

#### Var

<Class id="qiskit.circuit.classical.expr.Var" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L115-L205" signature="qiskit.circuit.classical.expr.Var(var, type, *, name=None)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A classical variable.

  These variables take two forms: a new-style variable that owns its storage location and has an associated name; and an old-style variable that wraps a [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") or [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") instance that is owned by some containing circuit. In general, construction of variables for use in programs should use [`Var.new()`](#qiskit.circuit.classical.expr.Var.new "qiskit.circuit.classical.expr.Var.new") or [`QuantumCircuit.add_var()`](qiskit.circuit.QuantumCircuit#add_var "qiskit.circuit.QuantumCircuit.add_var").

  Variables are immutable after construction, so they can be used as dictionary keys.

  **Parameters**

  *   **var** ([*qiskit.circuit.Clbit*](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit")  *|*[*qiskit.circuit.ClassicalRegister*](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister")  *|*[*uuid.UUID*](https://docs.python.org/3/library/uuid.html#uuid.UUID "(in Python v3.13)")) –
  *   **type** ([*types.Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type")) –
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) –

  ##### name

  <Attribute id="qiskit.circuit.classical.expr.Var.name" attributeTypeHint="str | None">
    The name of the variable. This is required to exist if the backing [`var`](#qiskit.circuit.classical.expr.Var.var "qiskit.circuit.classical.expr.Var.var") attribute is a [`UUID`](https://docs.python.org/3/library/uuid.html#uuid.UUID "(in Python v3.13)"), i.e. if it is a new-style variable, and must be `None` if it is an old-style variable.
  </Attribute>

  ##### new

  <Function id="qiskit.circuit.classical.expr.Var.new" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L153-L156" signature="new(name, type)" modifiers="classmethod">
    Generate a new named variable that owns its own backing storage.

    **Parameters**

    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) –
    *   **type** ([*types.Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type")) –

    **Return type**

    [*Self*](https://docs.python.org/3/library/typing.html#typing.Self "(in Python v3.13)")
  </Function>

  ##### var

  <Attribute id="qiskit.circuit.classical.expr.Var.var" attributeTypeHint="qiskit.circuit.Clbit | qiskit.circuit.ClassicalRegister | uuid.UUID">
    A reference to the backing data storage of the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var") instance. When lifting old-style [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") or [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") instances into a [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var"), this is exactly the [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") or [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister"). If the variable is a new-style classical variable (one that owns its own storage separate to the old [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit")/[`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") model), this field will be a [`UUID`](https://docs.python.org/3/library/uuid.html#uuid.UUID "(in Python v3.13)") to uniquely identify it.
  </Attribute>
</Class>

Similarly, literals used in expressions (such as integers) should be lifted to [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes with associated types. A [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") is always considered a constant expression.

#### Value

<Class id="qiskit.circuit.classical.expr.Value" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L277-L295" signature="qiskit.circuit.classical.expr.Value(value, type)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A single scalar value.

  **Parameters**

  *   **value** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
</Class>

Stretch variables for use in duration expressions are represented by the [`Stretch`](#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.Stretch") node.

#### Stretch

<Class id="qiskit.circuit.classical.expr.Stretch" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L208-L274" signature="qiskit.circuit.classical.expr.Stretch(var, name)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A stretch variable.

  In general, construction of stretch variables for use in programs should use [`Stretch.new()`](#qiskit.circuit.classical.expr.Stretch.new "qiskit.circuit.classical.expr.Stretch.new") or [`QuantumCircuit.add_stretch()`](qiskit.circuit.QuantumCircuit#add_stretch "qiskit.circuit.QuantumCircuit.add_stretch").

  **Parameters**

  *   **var** ([*UUID*](https://docs.python.org/3/library/uuid.html#uuid.UUID "(in Python v3.13)")) –
  *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) –

  ##### name

  <Attribute id="qiskit.circuit.classical.expr.Stretch.name" attributeTypeHint="str">
    The name of the stretch variable.
  </Attribute>

  ##### new

  <Function id="qiskit.circuit.classical.expr.Stretch.new" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L236-L239" signature="new(name)" modifiers="classmethod">
    Generate a new named stretch variable.

    **Parameters**

    **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) –

    **Return type**

    [*Self*](https://docs.python.org/3/library/typing.html#typing.Self "(in Python v3.13)")
  </Function>

  ##### var

  <Attribute id="qiskit.circuit.classical.expr.Stretch.var" attributeTypeHint="UUID">
    A [`UUID`](https://docs.python.org/3/library/uuid.html#uuid.UUID "(in Python v3.13)") to uniquely identify this stretch.
  </Attribute>
</Class>

The operations traditionally associated with pre-, post- or infix operators in programming are represented by the [`Unary`](#qiskit.circuit.classical.expr.Unary "qiskit.circuit.classical.expr.Unary") and [`Binary`](#qiskit.circuit.classical.expr.Binary "qiskit.circuit.classical.expr.Binary") nodes as appropriate. These each take an operation type code, which are exposed as enumerations inside each class as [`Unary.Op`](#qiskit.circuit.classical.expr.Unary.Op "qiskit.circuit.classical.expr.Unary.Op") and [`Binary.Op`](#qiskit.circuit.classical.expr.Binary.Op "qiskit.circuit.classical.expr.Binary.Op") respectively.

#### Unary

<Class id="qiskit.circuit.classical.expr.Unary" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L298-L353" signature="qiskit.circuit.classical.expr.Unary(op, operand, type)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A unary expression.

  **Parameters**

  *   **op** ([*Unary.Op*](#qiskit.circuit.classical.expr.Unary.Op "qiskit.circuit.classical.expr.Unary.Op")) – The opcode describing which operation is being done.
  *   **operand** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) – The operand of the operation.
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) – The resolved type of the result.

  ##### Op

  <Class id="qiskit.circuit.classical.expr.Unary.Op" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L310-L332" signature="Op(value)" modifiers="class">
    Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum "(in Python v3.13)")

    Enumeration of the opcodes for unary operations.

    The bitwise negation [`BIT_NOT`](#qiskit.circuit.classical.expr.Unary.Op.BIT_NOT "qiskit.circuit.classical.expr.Unary.Op.BIT_NOT") takes a single bit or an unsigned integer of known width, and returns a value of the same type.

    The logical negation [`LOGIC_NOT`](#qiskit.circuit.classical.expr.Unary.Op.LOGIC_NOT "qiskit.circuit.classical.expr.Unary.Op.LOGIC_NOT") takes an input that is implicitly coerced to a Boolean, and returns a Boolean.

    ###### BIT\_NOT

    <Attribute id="qiskit.circuit.classical.expr.Unary.Op.BIT_NOT" attributeValue="1">
      Bitwise negation. `~operand`.
    </Attribute>

    ###### LOGIC\_NOT

    <Attribute id="qiskit.circuit.classical.expr.Unary.Op.LOGIC_NOT" attributeValue="2">
      Logical negation. `!operand`.
    </Attribute>
  </Class>
</Class>

#### Binary

<Class id="qiskit.circuit.classical.expr.Binary" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L356-L464" signature="qiskit.circuit.classical.expr.Binary(op, left, right, type)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A binary expression.

  **Parameters**

  *   **op** ([*Binary.Op*](#qiskit.circuit.classical.expr.Binary.Op "qiskit.circuit.classical.expr.Binary.Op")) – The opcode describing which operation is being done.
  *   **left** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) – The left-hand operand.
  *   **right** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) – The right-hand operand.
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) – The resolved type of the result.

  ##### Op

  <Class id="qiskit.circuit.classical.expr.Binary.Op" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L369-L441" signature="Op(value)" modifiers="class">
    Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum "(in Python v3.13)")

    Enumeration of the opcodes for binary operations.

    The bitwise operations [`BIT_AND`](#qiskit.circuit.classical.expr.Binary.Op.BIT_AND "qiskit.circuit.classical.expr.Binary.Op.BIT_AND"), [`BIT_OR`](#qiskit.circuit.classical.expr.Binary.Op.BIT_OR "qiskit.circuit.classical.expr.Binary.Op.BIT_OR") and [`BIT_XOR`](#qiskit.circuit.classical.expr.Binary.Op.BIT_XOR "qiskit.circuit.classical.expr.Binary.Op.BIT_XOR") apply to two operands of the same type, which must be a single bit or an unsigned integer of fixed width. The resultant type is the same as the two input types.

    The logical operations [`LOGIC_AND`](#qiskit.circuit.classical.expr.Binary.Op.LOGIC_AND "qiskit.circuit.classical.expr.Binary.Op.LOGIC_AND") and [`LOGIC_OR`](#qiskit.circuit.classical.expr.Binary.Op.LOGIC_OR "qiskit.circuit.classical.expr.Binary.Op.LOGIC_OR") first implicitly coerce their arguments to Booleans, and then apply the logical operation. The resultant type is always Boolean.

    The binary mathematical relations [`EQUAL`](#qiskit.circuit.classical.expr.Binary.Op.EQUAL "qiskit.circuit.classical.expr.Binary.Op.EQUAL"), [`NOT_EQUAL`](#qiskit.circuit.classical.expr.Binary.Op.NOT_EQUAL "qiskit.circuit.classical.expr.Binary.Op.NOT_EQUAL"), [`LESS`](#qiskit.circuit.classical.expr.Binary.Op.LESS "qiskit.circuit.classical.expr.Binary.Op.LESS"), [`LESS_EQUAL`](#qiskit.circuit.classical.expr.Binary.Op.LESS_EQUAL "qiskit.circuit.classical.expr.Binary.Op.LESS_EQUAL"), [`GREATER`](#qiskit.circuit.classical.expr.Binary.Op.GREATER "qiskit.circuit.classical.expr.Binary.Op.GREATER") and [`GREATER_EQUAL`](#qiskit.circuit.classical.expr.Binary.Op.GREATER_EQUAL "qiskit.circuit.classical.expr.Binary.Op.GREATER_EQUAL") take unsigned integers (with an implicit cast to make them the same width), and return a Boolean.

    The bitshift operations [`SHIFT_LEFT`](#qiskit.circuit.classical.expr.Binary.Op.SHIFT_LEFT "qiskit.circuit.classical.expr.Binary.Op.SHIFT_LEFT") and [`SHIFT_RIGHT`](#qiskit.circuit.classical.expr.Binary.Op.SHIFT_RIGHT "qiskit.circuit.classical.expr.Binary.Op.SHIFT_RIGHT") can take bit-like container types (e.g. unsigned integers) as the left operand, and any integer type as the right-hand operand. In all cases, the output bit width is the same as the input, and zeros fill in the “exposed” spaces.

    The binary arithmetic operators [`ADD`](#qiskit.circuit.classical.expr.Binary.Op.ADD "qiskit.circuit.classical.expr.Binary.Op.ADD"), ``SUB:, :data:`MUL``, and [`DIV`](#qiskit.circuit.classical.expr.Binary.Op.DIV "qiskit.circuit.classical.expr.Binary.Op.DIV") can be applied to two floats or two unsigned integers, which should be made to be of the same width during construction via a cast. The [`ADD`](#qiskit.circuit.classical.expr.Binary.Op.ADD "qiskit.circuit.classical.expr.Binary.Op.ADD"), [`SUB`](#qiskit.circuit.classical.expr.Binary.Op.SUB "qiskit.circuit.classical.expr.Binary.Op.SUB"), and [`DIV`](#qiskit.circuit.classical.expr.Binary.Op.DIV "qiskit.circuit.classical.expr.Binary.Op.DIV") operators can be applied on two durations yielding another duration, or a float in the case of [`DIV`](#qiskit.circuit.classical.expr.Binary.Op.DIV "qiskit.circuit.classical.expr.Binary.Op.DIV"). The [`MUL`](#qiskit.circuit.classical.expr.Binary.Op.MUL "qiskit.circuit.classical.expr.Binary.Op.MUL") operator can also be applied to a duration and a numeric type, yielding another duration. Finally, the [`DIV`](#qiskit.circuit.classical.expr.Binary.Op.DIV "qiskit.circuit.classical.expr.Binary.Op.DIV") operator can be used to divide a duration by a numeric type, yielding a duration.

    ###### BIT\_AND

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.BIT_AND" attributeValue="1">
      Bitwise “and”. `lhs & rhs`.
    </Attribute>

    ###### BIT\_OR

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.BIT_OR" attributeValue="2">
      Bitwise “or”. `lhs | rhs`.
    </Attribute>

    ###### BIT\_XOR

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.BIT_XOR" attributeValue="3">
      Bitwise “exclusive or”. `lhs ^ rhs`.
    </Attribute>

    ###### LOGIC\_AND

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.LOGIC_AND" attributeValue="4">
      Logical “and”. `lhs && rhs`.
    </Attribute>

    ###### LOGIC\_OR

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.LOGIC_OR" attributeValue="5">
      Logical “or”. `lhs || rhs`.
    </Attribute>

    ###### EQUAL

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.EQUAL" attributeValue="6">
      Numeric equality. `lhs == rhs`.
    </Attribute>

    ###### NOT\_EQUAL

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.NOT_EQUAL" attributeValue="7">
      Numeric inequality. `lhs != rhs`.
    </Attribute>

    ###### LESS

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.LESS" attributeValue="8">
      Numeric less than. `lhs < rhs`.
    </Attribute>

    ###### LESS\_EQUAL

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.LESS_EQUAL" attributeValue="9">
      Numeric less than or equal to. `lhs <= rhs`
    </Attribute>

    ###### GREATER

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.GREATER" attributeValue="10">
      Numeric greater than. `lhs > rhs`.
    </Attribute>

    ###### GREATER\_EQUAL

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.GREATER_EQUAL" attributeValue="11">
      Numeric greater than or equal to. `lhs >= rhs`.
    </Attribute>

    ###### SHIFT\_LEFT

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.SHIFT_LEFT" attributeValue="12">
      Zero-padding bitshift to the left. `lhs << rhs`.
    </Attribute>

    ###### SHIFT\_RIGHT

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.SHIFT_RIGHT" attributeValue="13">
      Zero-padding bitshift to the right. `lhs >> rhs`.
    </Attribute>

    ###### ADD

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.ADD" attributeValue="14">
      Addition. `lhs + rhs`.
    </Attribute>

    ###### SUB

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.SUB" attributeValue="15">
      Subtraction. `lhs - rhs`.
    </Attribute>

    ###### MUL

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.MUL" attributeValue="16">
      Multiplication. `lhs * rhs`.
    </Attribute>

    ###### DIV

    <Attribute id="qiskit.circuit.classical.expr.Binary.Op.DIV" attributeValue="17">
      Division. `lhs / rhs`.
    </Attribute>
  </Class>
</Class>

Bit-like types (unsigned integers) can be indexed by integer types, represented by [`Index`](#qiskit.circuit.classical.expr.Index "qiskit.circuit.classical.expr.Index"). The result is a single bit. The resulting expression has an associated memory location (and so can be used as an lvalue for [`Store`](circuit#qiskit.circuit.Store "qiskit.circuit.Store"), etc) if the target is also an lvalue.

#### Index

<Class id="qiskit.circuit.classical.expr.Index" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L467-L498" signature="qiskit.circuit.classical.expr.Index(target, index, type)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  An indexing expression.

  **Parameters**

  *   **target** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) – The object being indexed.
  *   **index** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) – The expression doing the indexing.
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) – The resolved type of the result.
</Class>

When constructing expressions, one must ensure that the types are valid for the operation. Attempts to construct expressions with invalid types will raise a regular Python `TypeError`.

Expressions in this system are defined to act only on certain sets of types. However, values may be cast to a suitable supertype in order to satisfy the typing requirements. In these cases, a node in the expression tree is used to represent the promotion. In all cases where operations note that they “implicitly cast” or “coerce” their arguments, the expression tree must have this node representing the conversion.

#### Cast

<Class id="qiskit.circuit.classical.expr.Cast" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/expr.py#L86-L112" signature="qiskit.circuit.classical.expr.Cast(operand, type, implicit=False)" modifiers="final class">
  Bases: [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")

  A cast from one type to another, implied by the use of an expression in a different context.

  **Parameters**

  *   **operand** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")) –
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **implicit** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) –
</Class>

<span id="circuit-classical-expressions-expr-construction" />

### Construction

Constructing the tree representation directly is verbose and easy to make a mistake with the typing. In many cases, much of the typing can be inferred, scalar values can automatically be promoted to [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") instances, and any required promotions can be resolved into suitable [`Cast`](#qiskit.circuit.classical.expr.Cast "qiskit.circuit.classical.expr.Cast") nodes.

The functions and methods described in this section are a more user-friendly way to build the expression tree, while staying close to the internal representation. All these functions will automatically lift valid Python scalar values into corresponding [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var") or [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") objects, and will resolve any required implicit casts on your behalf. If you want to directly use some scalar value as an [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr") node, you can manually [`lift()`](#qiskit.circuit.classical.expr.lift "qiskit.circuit.classical.expr.lift") it yourself.

#### lift

<Function id="qiskit.circuit.classical.expr.lift" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L86-L145" signature="qiskit.circuit.classical.expr.lift(value, /, type=None)">
  Lift the given Python `value` to a [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.expr.Value") or [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var").

  If an explicit `type` is given, the typing in the output will reflect that.

  **Examples**

  Lifting simple circuit objects to be [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") instances:

  ```python
  >>> from qiskit.circuit import Clbit, ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.lift(Clbit())
  Var(<clbit>, Bool())
  >>> expr.lift(ClassicalRegister(3, "c"))
  Var(ClassicalRegister(3, "c"), Uint(3))
  ```

  The type of the return value can be influenced, if the given value could be interpreted losslessly as the given type (use [`cast()`](#qiskit.circuit.classical.expr.cast "qiskit.circuit.classical.expr.cast") to perform a full set of casting operations, include lossy ones):

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr, types
  >>> expr.lift(ClassicalRegister(3, "c"), types.Uint(5))
  Var(ClassicalRegister(3, "c"), Uint(5))
  >>> expr.lift(5, types.Uint(4))
  Value(5, Uint(4))
  ```

  **Parameters**

  *   **value** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **type** ([*types.Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type") *| None*) –

  **Return type**

  [Expr](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")
</Function>

Typically you should create memory-owning [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var") instances by using the [`QuantumCircuit.add_var()`](qiskit.circuit.QuantumCircuit#add_var "qiskit.circuit.QuantumCircuit.add_var") method to declare them in some circuit context, since a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") will not accept an [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr") that contains variables that are not already declared in it, since it needs to know how to allocate the storage and how the variable will be initialized. However, should you want to do this manually, you should use the low-level [`Var.new()`](#qiskit.circuit.classical.expr.Var.new "qiskit.circuit.classical.expr.Var.new") call to safely generate a named variable for usage.

You can manually specify casts in cases where the cast is allowed in explicit form, but may be lossy (such as the cast of a higher precision [`Uint`](#qiskit.circuit.classical.types.Uint "qiskit.circuit.classical.types.Uint") to a lower precision one).

#### cast

<Function id="qiskit.circuit.classical.expr.cast" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L148-L163" signature="qiskit.circuit.classical.expr.cast(operand, type, /)">
  Create an explicit cast from the given value to the given type.

  **Examples**

  Add an explicit cast node that explicitly casts a higher precision type to a lower precision one:

  ```python
  >>> from qiskit.circuit.classical import expr, types
  >>> value = expr.value(5, types.Uint(32))
  >>> expr.cast(value, types.Uint(8))
  Cast(Value(5, types.Uint(32)), types.Uint(8), implicit=False)
  ```

  **Parameters**

  *   **operand** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **type** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

There are helper constructor functions for each of the unary operations.

#### bit\_not

<Function id="qiskit.circuit.classical.expr.bit_not" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L166-L181" signature="qiskit.circuit.classical.expr.bit_not(operand, /)">
  Create a bitwise ‘not’ expression node from the given value, resolving any implicit casts and lifting the value into a [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") node if required.

  **Examples**

  Bitwise negation of a [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister"):

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.bit_not(ClassicalRegister(3, "c"))
  Unary(Unary.Op.BIT_NOT, Var(ClassicalRegister(3, 'c'), Uint(3)), Uint(3))
  ```

  **Parameters**

  **operand** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### logic\_not

<Function id="qiskit.circuit.classical.expr.logic_not" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L184-L204" signature="qiskit.circuit.classical.expr.logic_not(operand, /)">
  Create a logical ‘not’ expression node from the given value, resolving any implicit casts and lifting the value into a [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") node if required.

  **Examples**

  Logical negation of a [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister"):

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.logic_not(ClassicalRegister(3, "c"))
  Unary(Unary.Op.LOGIC_NOT, Cast(Var(ClassicalRegister(3, 'c'), Uint(3)), Bool(), implicit=True), Bool())
  ```

  **Parameters**

  **operand** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

Similarly, the binary operations and relations have helper functions defined.

#### bit\_and

<Function id="qiskit.circuit.classical.expr.bit_and" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L260-L276" signature="qiskit.circuit.classical.expr.bit_and(left, right, /)">
  Create a bitwise ‘and’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Bitwise ‘and’ of a classical register and an integer literal:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.bit_and(ClassicalRegister(3, "c"), 0b111)
  Binary(Binary.Op.BIT_AND, Var(ClassicalRegister(3, 'c'), Uint(3)), Value(7, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### bit\_or

<Function id="qiskit.circuit.classical.expr.bit_or" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L279-L295" signature="qiskit.circuit.classical.expr.bit_or(left, right, /)">
  Create a bitwise ‘or’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Bitwise ‘or’ of a classical register and an integer literal:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.bit_or(ClassicalRegister(3, "c"), 0b101)
  Binary(Binary.Op.BIT_OR, Var(ClassicalRegister(3, 'c'), Uint(3)), Value(5, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### bit\_xor

<Function id="qiskit.circuit.classical.expr.bit_xor" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L298-L314" signature="qiskit.circuit.classical.expr.bit_xor(left, right, /)">
  Create a bitwise ‘exclusive or’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Bitwise ‘exclusive or’ of a classical register and an integer literal:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.bit_xor(ClassicalRegister(3, "c"), 0b101)
  Binary(Binary.Op.BIT_XOR, Var(ClassicalRegister(3, 'c'), Uint(3)), Value(5, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### logic\_and

<Function id="qiskit.circuit.classical.expr.logic_and" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L328-L340" signature="qiskit.circuit.classical.expr.logic_and(left, right, /)">
  Create a logical ‘and’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Logical ‘and’ of two classical bits:

  ```python
  >>> from qiskit.circuit import Clbit
  >>> from qiskit.circuit.classical import expr
  >>> expr.logical_and(Clbit(), Clbit())
  Binary(Binary.Op.LOGIC_AND, Var(<clbit 0>, Bool()), Var(<clbit 1>, Bool()), Bool())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### logic\_or

<Function id="qiskit.circuit.classical.expr.logic_or" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L343-L355" signature="qiskit.circuit.classical.expr.logic_or(left, right, /)">
  Create a logical ‘or’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Logical ‘or’ of two classical bits

  ```python
  >>> from qiskit.circuit import Clbit
  >>> from qiskit.circuit.classical import expr
  >>> expr.logical_and(Clbit(), Clbit())
  Binary(Binary.Op.LOGIC_OR, Var(<clbit 0>, Bool()), Var(<clbit 1>, Bool()), Bool())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### equal

<Function id="qiskit.circuit.classical.expr.equal" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L368-L383" signature="qiskit.circuit.classical.expr.equal(left, right, /)">
  Create an ‘equal’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Equality between a classical register and an integer:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.equal(ClassicalRegister(3, "c"), 7)
  Binary(Binary.Op.EQUAL, Var(ClassicalRegister(3, "c"), Uint(3)), Value(7, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### not\_equal

<Function id="qiskit.circuit.classical.expr.not_equal" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L386-L401" signature="qiskit.circuit.classical.expr.not_equal(left, right, /)">
  Create a ‘not equal’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Inequality between a classical register and an integer:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.not_equal(ClassicalRegister(3, "c"), 7)
  Binary(Binary.Op.NOT_EQUAL, Var(ClassicalRegister(3, "c"), Uint(3)), Value(7, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### less

<Function id="qiskit.circuit.classical.expr.less" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L414-L429" signature="qiskit.circuit.classical.expr.less(left, right, /)">
  Create a ‘less than’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Query if a classical register is less than an integer:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.less(ClassicalRegister(3, "c"), 5)
  Binary(Binary.Op.LESS, Var(ClassicalRegister(3, "c"), Uint(3)), Value(5, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### less\_equal

<Function id="qiskit.circuit.classical.expr.less_equal" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L432-L447" signature="qiskit.circuit.classical.expr.less_equal(left, right, /)">
  Create a ‘less than or equal to’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Query if a classical register is less than or equal to another:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.less(ClassicalRegister(3, "a"), ClassicalRegister(3, "b"))
  Binary(Binary.Op.LESS_EQUAL, Var(ClassicalRegister(3, "a"), Uint(3)), Var(ClassicalRegister(3, "b"), Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### greater

<Function id="qiskit.circuit.classical.expr.greater" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L450-L465" signature="qiskit.circuit.classical.expr.greater(left, right, /)">
  Create a ‘greater than’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Query if a classical register is greater than an integer:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.less(ClassicalRegister(3, "c"), 5)
  Binary(Binary.Op.GREATER, Var(ClassicalRegister(3, "c"), Uint(3)), Value(5, Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### greater\_equal

<Function id="qiskit.circuit.classical.expr.greater_equal" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L468-L483" signature="qiskit.circuit.classical.expr.greater_equal(left, right, /)">
  Create a ‘greater than or equal to’ expression node from the given value, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Query if a classical register is greater than or equal to another:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.less(ClassicalRegister(3, "a"), ClassicalRegister(3, "b"))
  Binary(Binary.Op.GREATER_EQUAL, Var(ClassicalRegister(3, "a"), Uint(3)), Var(ClassicalRegister(3, "b"), Uint(3)), Uint(3))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### shift\_left

<Function id="qiskit.circuit.classical.expr.shift_left" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L505-L530" signature="qiskit.circuit.classical.expr.shift_left(left, right, /, type=None)">
  Create a ‘bitshift left’ expression node from the given two values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  If `type` is given, the `left` operand will be coerced to it (if possible).

  **Examples**

  Shift the value of a standalone variable left by some amount:

  ```python
  >>> from qiskit.circuit.classical import expr, types
  >>> a = expr.Var.new("a", types.Uint(8))
  >>> expr.shift_left(a, 4)
  Binary(Binary.Op.SHIFT_LEFT, Var(<UUID>, Uint(8), name='a'), Value(4, Uint(3)), Uint(8))
  ```

  Shift an integer literal by a variable amount, coercing the type of the literal:

  ```python
  >>> expr.shift_left(3, a, types.Uint(16))
  Binary(Binary.Op.SHIFT_LEFT, Value(3, Uint(16)), Var(<UUID>, Uint(8), name='a'), Uint(16))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **type** ([*types.Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type") *| None*) –

  **Return type**

  [Expr](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")
</Function>

#### shift\_right

<Function id="qiskit.circuit.classical.expr.shift_right" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L533-L550" signature="qiskit.circuit.classical.expr.shift_right(left, right, /, type=None)">
  Create a ‘bitshift right’ expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  If `type` is given, the `left` operand will be coerced to it (if possible).

  **Examples**

  Shift the value of a classical register right by some amount:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.shift_right(ClassicalRegister(8, "a"), 4)
  Binary(Binary.Op.SHIFT_RIGHT, Var(ClassicalRegister(8, "a"), Uint(8)), Value(4, Uint(3)), Uint(8))
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **type** ([*types.Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type") *| None*) –

  **Return type**

  [Expr](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")
</Function>

#### add

<Function id="qiskit.circuit.classical.expr.add" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L590-L616" signature="qiskit.circuit.classical.expr.add(left, right, /)">
  Create an addition expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Addition of two floating point numbers:

  ```python
  >>> from qiskit.circuit.classical import expr
  >>> expr.add(5.0, 2.0)
  Binary(Binary.Op.ADD, Value(5.0, Float()), Value(2.0, Float()), Float())
  ```

  Addition of two durations:

  ```python
  >>> from qiskit.circuit import Duration
  >>> from qiskit.circuit.classical import expr
  >>> expr.add(Duration.dt(1000), Duration.dt(1000))
  Binary(Binary.Op.ADD, Value(Duration.dt(1000), Duration()), Value(Duration.dt(1000), Duration()), Duration())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### sub

<Function id="qiskit.circuit.classical.expr.sub" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L619-L645" signature="qiskit.circuit.classical.expr.sub(left, right, /)">
  Create a subtraction expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  **Examples**

  Subtraction of two floating point numbers:

  ```python
  >>> from qiskit.circuit.classical import expr
  >>> expr.sub(5.0, 2.0)
  Binary(Binary.Op.SUB, Value(5.0, Float()), Value(2.0, Float()), Float())
  ```

  Subtraction of two durations:

  ```python
  >>> from qiskit.circuit import Duration
  >>> from qiskit.circuit.classical import expr
  >>> expr.add(Duration.dt(1000), Duration.dt(1000))
  Binary(Binary.Op.SUB, Value(Duration.dt(1000), Duration()), Value(Duration.dt(1000), Duration()), Duration())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### mul

<Function id="qiskit.circuit.classical.expr.mul" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L648-L696" signature="qiskit.circuit.classical.expr.mul(left, right)">
  Create a multiplication expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  This can be used to multiply numeric operands of the same type kind, or to multiply a duration operand by a numeric operand.

  **Examples**

  Multiplication of two floating point numbers:

  ```python
  >>> from qiskit.circuit.classical import expr
  >>> expr.mul(5.0, 2.0)
  Binary(Binary.Op.MUL, Value(5.0, Float()), Value(2.0, Float()), Float())
  ```

  Multiplication of a duration by a float:

  ```python
  >>> from qiskit.circuit import Duration
  >>> from qiskit.circuit.classical import expr
  >>> expr.mul(Duration.dt(1000), 0.5)
  Binary(Binary.Op.MUL, Value(Duration.dt(1000), Duration()), Value(0.5, Float()), Duration())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

#### div

<Function id="qiskit.circuit.classical.expr.div" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L699-L764" signature="qiskit.circuit.classical.expr.div(left, right)">
  Create a division expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  This can be used to divide numeric operands of the same type kind, to divide a :class\`\~.types.Duration\` operand by a numeric operand, or to divide two :class\`\~.types.Duration\` operands which yields an expression of type [`Float`](#qiskit.circuit.classical.types.Float "qiskit.circuit.classical.types.Float").

  **Examples**

  Division of two floating point numbers:

  ```python
  >>> from qiskit.circuit.classical import expr
  >>> expr.div(5.0, 2.0)
  Binary(Binary.Op.DIV, Value(5.0, Float()), Value(2.0, Float()), Float())
  ```

  Division of two durations:

  ```python
  >>> from qiskit.circuit import Duration
  >>> from qiskit.circuit.classical import expr
  >>> expr.div(Duration.dt(10000), Duration.dt(1000))
  Binary(Binary.Op.DIV, Value(Duration.dt(10000), Duration()), Value(Duration.dt(1000), Duration()), Float())
  ```

  Division of a duration by a float:

  ```python
  >>> from qiskit.circuit import Duration
  >>> from qiskit.circuit.classical import expr
  >>> expr.div(Duration.dt(10000), 12.0)
  Binary(Binary.Op.DIV, Value(Duration.dt(10000), Duration()), Value(12.0, types.Float()), Duration())
  ```

  **Parameters**

  *   **left** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **right** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

You can index into unsigned integers and bit-likes using another unsigned integer of any width. This includes in storing operations, if the target of the index is writeable.

#### index

<Function id="qiskit.circuit.classical.expr.index" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L553-L570" signature="qiskit.circuit.classical.expr.index(target, index, /)">
  Index into the `target` with the given integer `index`, lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.

  This can be used as the target of a [`Store`](circuit#qiskit.circuit.Store "qiskit.circuit.Store"), if the `target` is itself an lvalue.

  **Examples**

  Index into a classical register with a literal:

  ```python
  >>> from qiskit.circuit import ClassicalRegister
  >>> from qiskit.circuit.classical import expr
  >>> expr.index(ClassicalRegister(8, "a"), 3)
  Index(Var(ClassicalRegister(8, "a"), Uint(8)), Value(3, Uint(2)), Bool())
  ```

  **Parameters**

  *   **target** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –
  *   **index** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) –

  **Return type**

  [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
</Function>

Qiskit’s legacy method for specifying equality conditions for use in conditionals is to use a two-tuple of a [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") or [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") and an integer. This represents an exact equality condition, and there are no ways to specify any other relations. The helper function [`lift_legacy_condition()`](#qiskit.circuit.classical.expr.lift_legacy_condition "qiskit.circuit.classical.expr.lift_legacy_condition") converts this legacy format into the new expression syntax.

#### lift\_legacy\_condition

<Function id="qiskit.circuit.classical.expr.lift_legacy_condition" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/constructors.py#L69-L83" signature="qiskit.circuit.classical.expr.lift_legacy_condition(condition, /)">
  Lift a legacy two-tuple equality condition into a new-style [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr").

  **Parameters**

  **condition** ([*tuple*](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")*\[*[*qiskit.circuit.Clbit*](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit")  *|*[*qiskit.circuit.ClassicalRegister*](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister")*,* [*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*) –

  **Return type**

  [Expr](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")
</Function>

### Working with the expression tree

A typical consumer of the expression tree wants to recursively walk through the tree, potentially statefully, acting on each node differently depending on its type. This is naturally a double-dispatch problem; the logic of ‘what is to be done’ is likely stateful and users should be free to define their own operations, yet each node defines ‘what is being acted on’. We enable this double dispatch by providing a base visitor class for the expression tree.

#### ExprVisitor

<Class id="qiskit.circuit.classical.expr.ExprVisitor" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L32-L64" signature="qiskit.circuit.classical.expr.ExprVisitor" modifiers="class">
  Bases: [`Generic`](https://docs.python.org/3/library/typing.html#typing.Generic "(in Python v3.13)")\[`_T_co`]

  Base class for visitors to the [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr") tree. Subclasses should override whichever of the `visit_*` methods that they are able to handle, and should be organized such that non-existent methods will never be called.

  ##### visit\_binary

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_binary" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L57-L58" signature="visit_binary(node, /)">
    **Parameters**

    **node** ([*Binary*](#qiskit.circuit.classical.expr.Binary "qiskit.circuit.classical.expr.expr.Binary")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_cast

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_cast" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L60-L61" signature="visit_cast(node, /)">
    **Parameters**

    **node** ([*Cast*](#qiskit.circuit.classical.expr.Cast "qiskit.circuit.classical.expr.expr.Cast")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_generic

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_generic" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L42-L43" signature="visit_generic(node, /)">
    **Parameters**

    **node** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_index

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_index" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L63-L64" signature="visit_index(node, /)">
    **Parameters**

    **node** ([*Index*](#qiskit.circuit.classical.expr.Index "qiskit.circuit.classical.expr.expr.Index")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_stretch

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_stretch" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L48-L49" signature="visit_stretch(node, /)">
    **Parameters**

    **node** ([*Stretch*](#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.expr.Stretch")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_unary

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_unary" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L54-L55" signature="visit_unary(node, /)">
    **Parameters**

    **node** ([*Unary*](#qiskit.circuit.classical.expr.Unary "qiskit.circuit.classical.expr.expr.Unary")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_value

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_value" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L51-L52" signature="visit_value(node, /)">
    **Parameters**

    **node** ([*Value*](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.expr.Value")) –

    **Return type**

    *\_T\_co*
  </Function>

  ##### visit\_var

  <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_var" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L45-L46" signature="visit_var(node, /)">
    **Parameters**

    **node** ([*Var*](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var")) –

    **Return type**

    *\_T\_co*
  </Function>
</Class>

Consumers of the expression tree should subclass the visitor, and override the `visit_*` methods that they wish to handle. Any non-overridden methods will call [`visit_generic()`](#qiskit.circuit.classical.expr.ExprVisitor.visit_generic "qiskit.circuit.classical.expr.ExprVisitor.visit_generic"), which unless overridden will raise a `RuntimeError` to ensure that you are aware if new nodes have been added to the expression tree that you are not yet handling.

For the convenience of simple visitors that only need to inspect the variables in an expression and not the general structure, the iterator method [`iter_vars()`](#qiskit.circuit.classical.expr.iter_vars "qiskit.circuit.classical.expr.iter_vars") is provided.

#### iter\_vars

<Function id="qiskit.circuit.classical.expr.iter_vars" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L125-L147" signature="qiskit.circuit.classical.expr.iter_vars(node)">
  Get an iterator over the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") nodes referenced at any level in the given [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr").

  **Examples**

  Print out the name of each [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") encountered:

  ```python
  from qiskit.circuit import ClassicalRegister
  from qiskit.circuit.classical import expr

  cr1 = ClassicalRegister(3, "a")
  cr2 = ClassicalRegister(3, "b")

  for node in expr.iter_vars(expr.bit_and(expr.bit_not(cr1), cr2)):
      if isinstance(node.var, ClassicalRegister):
          print(node.var.name)
  ```

  <Admonition title="See also" type="note">
    **[`iter_identifiers()`](#qiskit.circuit.classical.expr.iter_identifiers "qiskit.circuit.classical.expr.iter_identifiers")**

    Get an iterator over all identifier nodes in the expression, including both [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") and [`Stretch`](#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.expr.Stretch") nodes.
  </Admonition>

  **Parameters**

  **node** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) –

  **Return type**

  [*Iterator*](https://docs.python.org/3/library/typing.html#typing.Iterator "(in Python v3.13)")\[[*Var*](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var")]
</Function>

To iterator over all variables including stretch variables, the iterator method [`iter_identifiers()`](#qiskit.circuit.classical.expr.iter_identifiers "qiskit.circuit.classical.expr.iter_identifiers") is provided.

#### iter\_identifiers

<Function id="qiskit.circuit.classical.expr.iter_identifiers" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L150-L171" signature="qiskit.circuit.classical.expr.iter_identifiers(node)">
  Get an iterator over the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") and [`Stretch`](#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.expr.Stretch") nodes referenced at any level in the given [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr").

  **Examples**

  Print out the name of each [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") encountered:

  ```python
  from qiskit.circuit import ClassicalRegister
  from qiskit.circuit.classical import expr

  cr1 = ClassicalRegister(3, "a")
  cr2 = ClassicalRegister(3, "b")

  for node in expr.iter_vars(expr.bit_and(expr.bit_not(cr1), cr2)):
      if isinstance(node.var, ClassicalRegister):
          print(node.var.name)
  ```

  <Admonition title="See also" type="note">
    **[`iter_vars()`](#qiskit.circuit.classical.expr.iter_vars "qiskit.circuit.classical.expr.iter_vars")**

    Get an iterator over just the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") nodes in the expression.
  </Admonition>

  **Parameters**

  **node** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) –

  **Return type**

  [*Iterator*](https://docs.python.org/3/library/typing.html#typing.Iterator "(in Python v3.13)")\[[*Var*](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") | [*Stretch*](#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.expr.Stretch")]
</Function>

Two expressions can be compared for direct structural equality by using the built-in Python `==` operator. In general, though, one might want to compare two expressions slightly more semantically, allowing that the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.Var") nodes inside them are bound to different memory-location descriptions between two different circuits. In this case, one can use [`structurally_equivalent()`](#qiskit.circuit.classical.expr.structurally_equivalent "qiskit.circuit.classical.expr.structurally_equivalent") with two suitable “key” functions to do the comparison.

#### structurally\_equivalent

<Function id="qiskit.circuit.classical.expr.structurally_equivalent" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L255-L304" signature="qiskit.circuit.classical.expr.structurally_equivalent(left, right, left_var_key=None, right_var_key=None)">
  Do these two expressions have exactly the same tree structure, up to some key function for the [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") objects?

  In other words, are these two expressions the exact same trees, except we compare the [`Var.var`](#qiskit.circuit.classical.expr.Var.var "qiskit.circuit.classical.expr.Var.var") fields by calling the appropriate `*_var_key` function on them, and comparing that output for equality. This function does not allow any semantic “equivalences” such as asserting that `a == b` is equivalent to `b == a`; the evaluation order of the operands could, in general, cause such a statement to be false (consider hypothetical `extern` functions that access global state).

  There’s no requirements on the key functions, except that their outputs should have general `__eq__` methods. If a key function returns `None`, the variable will be used verbatim instead.

  **Parameters**

  *   **left** ([*expr.Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) – one of the [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr") nodes.
  *   **right** ([*expr.Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) – the other [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr") node.
  *   **left\_var\_key** ([*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable "(in Python v3.13)")*\[\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*],* [*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*] | None*) – a callable whose output should be used when comparing [`Var.var`](#qiskit.circuit.classical.expr.Var.var "qiskit.circuit.classical.expr.Var.var") attributes. If this argument is `None` or its output is `None` for a given variable in `left`, the variable will be used verbatim.
  *   **right\_var\_key** ([*Callable*](https://docs.python.org/3/library/typing.html#typing.Callable "(in Python v3.13)")*\[\[*[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*],* [*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")*] | None*) – same as `left_var_key`, but used on the variables in `right` instead.

  **Return type**

  [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")

  **Examples**

  Comparing two expressions for structural equivalence, with no remapping of the variables. These are different because the different [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") instances compare differently:

  ```python
  >>> from qiskit.circuit import Clbit
  >>> from qiskit.circuit.classical import expr
  >>> left_bits = [Clbit(), Clbit()]
  >>> right_bits = [Clbit(), Clbit()]
  >>> left = expr.logic_and(expr.logic_not(left_bits[0]), left_bits[1])
  >>> right = expr.logic_and(expr.logic_not(right_bits[0]), right_bits[1])
  >>> expr.structurally_equivalent(left, right)
  False
  ```

  Comparing the same two expressions, but this time using mapping functions that associate the bits with simple indices:

  ```python
  >>> left_key = {var: i for i, var in enumerate(left_bits)}.get
  >>> right_key = {var: i for i, var in enumerate(right_bits)}.get
  >>> expr.structurally_equivalent(left, right, left_key, right_key)
  True
  ```
</Function>

Some expressions have associated memory locations, and others may be purely temporary. You can use [`is_lvalue()`](#qiskit.circuit.classical.expr.is_lvalue "qiskit.circuit.classical.expr.is_lvalue") to determine whether an expression has an associated memory location.

#### is\_lvalue

<Function id="qiskit.circuit.classical.expr.is_lvalue" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/expr/visitors.py#L335-L375" signature="qiskit.circuit.classical.expr.is_lvalue(node, /)">
  Return whether this expression can be used in l-value positions, that is, whether it has a well-defined location in memory, such as one that might be writeable.

  Being an l-value is a necessary but not sufficient for this location to be writeable; it is permissible that a larger object containing this memory location may not allow writing from the scope that attempts to write to it. This would be an access property of the containing program, however, and not an inherent property of the expression system.

  A constant expression is never an lvalue.

  **Examples**

  Literal values are never l-values; there’s no memory location associated with (for example) the constant `1`:

  ```python
  >>> from qiskit.circuit.classical import expr
  >>> expr.is_lvalue(expr.lift(2))
  False
  ```

  [`Var`](#qiskit.circuit.classical.expr.Var "qiskit.circuit.classical.expr.expr.Var") nodes are always l-values, because they always have some associated memory location:

  ```python
  >>> from qiskit.circuit.classical import types
  >>> from qiskit.circuit import Clbit
  >>> expr.is_lvalue(expr.Var.new("a", types.Bool()))
  True
  >>> expr.is_lvalue(expr.lift(Clbit()))
  True
  ```

  Currently there are no unary or binary operations on variables that can produce an l-value expression, but it is likely in the future that some sort of “indexing” operation will be added, which could produce l-values:

  ```python
  >>> a = expr.Var.new("a", types.Uint(8))
  >>> b = expr.Var.new("b", types.Uint(8))
  >>> expr.is_lvalue(a) and expr.is_lvalue(b)
  True
  >>> expr.is_lvalue(expr.bit_and(a, b))
  False
  ```

  **Parameters**

  **node** ([*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")) –

  **Return type**

  [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
</Function>

<span id="module-qiskit.circuit.classical.types" />

<span id="typing-qiskit-circuit-classical-types" />

## Typing

`qiskit.circuit.classical.types`

<span id="id1" />

### Representation

The type system of the expression tree is exposed through this module. This is inherently linked to the expression system in the [`expr`](#module-qiskit.circuit.classical.expr "qiskit.circuit.classical.expr") module, as most expressions can only be understood with the context of the types that they act on.

All types inherit from an abstract base class:

#### Type

<Class id="qiskit.circuit.classical.types.Type" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/types.py#L51-L82" signature="qiskit.circuit.classical.types.Type" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Root base class of all nodes in the type tree. The base case should never be instantiated directly.

  This must not be subclassed by users; subclasses form the internal data of the representation of expressions, and it does not make sense to add more outside of Qiskit library code.
</Class>

Types should be considered immutable objects, and you must not mutate them. It is permissible to reuse a [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type") that you take from another object without copying it, and generally this will be the best approach for performance. [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.Type") objects are designed to be small amounts of data, and it’s best to point to the same instance of the data where possible rather than heap-allocating a new version of the same thing. Where possible, the class constructors will return singleton instances to facilitate this.

The [`Bool`](#qiskit.circuit.classical.types.Bool "qiskit.circuit.classical.types.Bool") type represents [`Clbit`](circuit#qiskit.circuit.Clbit "qiskit.circuit.Clbit") and the literals `True` and `False`, the [`Uint`](#qiskit.circuit.classical.types.Uint "qiskit.circuit.classical.types.Uint") type represents [`ClassicalRegister`](circuit#qiskit.circuit.ClassicalRegister "qiskit.circuit.ClassicalRegister") and Python integers, the [`Float`](#qiskit.circuit.classical.types.Float "qiskit.circuit.classical.types.Float") type represents Python floats, and the [`Duration`](#qiskit.circuit.classical.types.Duration "qiskit.circuit.classical.types.Duration") type represents a duration for use in timing-aware circuit operations.

#### Bool

<Class id="qiskit.circuit.classical.types.Bool" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/types.py#L85-L98" signature="qiskit.circuit.classical.types.Bool" modifiers="final class">
  Bases: [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")

  The Boolean type. This has exactly two values: `True` and `False`.
</Class>

#### Uint

<Class id="qiskit.circuit.classical.types.Uint" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/types.py#L101-L119" signature="qiskit.circuit.classical.types.Uint(width)" modifiers="final class">
  Bases: [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")

  An unsigned integer of fixed bit width.

  **Parameters**

  **width** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) –
</Class>

#### Float

<Class id="qiskit.circuit.classical.types.Float" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/types.py#L122-L137" signature="qiskit.circuit.classical.types.Float" modifiers="final class">
  Bases: [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")

  An IEEE-754 double-precision floating point number. In the future, this may also be used to represent other fixed-width floats.
</Class>

#### Duration

<Class id="qiskit.circuit.classical.types.Duration" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/types.py#L140-L153" signature="qiskit.circuit.classical.types.Duration" modifiers="final class">
  Bases: [`Type`](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")

  A length of time, possibly negative.
</Class>

### Working with types

There are some additional functions on these types documented in the subsequent sections. These are mostly expected to be used only in manipulations of the expression tree; users who are building expressions using the [user-facing construction interface](#circuit-classical-expressions-expr-construction) should not need to use these.

### Partial ordering of types

The type system is equipped with a partial ordering, where $a < b$ is interpreted as “$a$ is a strict subtype of $b$”. Note that the partial ordering is a subset of the directed graph that describes the allowed explicit casting operations between types. The partial ordering defines when one type may be lossless directly interpreted as another.

The low-level interface to querying the subtyping relationship is the [`order()`](#qiskit.circuit.classical.types.order "qiskit.circuit.classical.types.order") function.

#### order

<Function id="qiskit.circuit.classical.types.order" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L74-L91" signature="qiskit.circuit.classical.types.order(left, right, /)">
  Get the ordering relationship between the two types as an enumeration value.

  **Examples**

  Compare two [`Uint`](#qiskit.circuit.classical.types.Uint "qiskit.circuit.classical.types.Uint") types of different widths:

  ```python
  >>> from qiskit.circuit.classical import types
  >>> types.order(types.Uint(8), types.Uint(16))
  Ordering.LESS
  ```

  Compare two types that have no ordering between them:

  ```python
  >>> types.order(types.Uint(8), types.Bool())
  Ordering.NONE
  ```

  **Parameters**

  *   **left** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **right** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –

  **Return type**

  [*Ordering*](#qiskit.circuit.classical.types.Ordering "qiskit.circuit.classical.types.ordering.Ordering")
</Function>

The return value is an enumeration [`Ordering`](#qiskit.circuit.classical.types.Ordering "qiskit.circuit.classical.types.Ordering") that describes what, if any, subtyping relationship exists between the two types.

#### Ordering

<Class id="qiskit.circuit.classical.types.Ordering" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L38-L55" signature="qiskit.circuit.classical.types.Ordering(value)" modifiers="class">
  Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum "(in Python v3.13)")

  Enumeration listing the possible relations between two types. Types only have a partial ordering, so it’s possible for two types to have no sub-typing relationship.

  Note that the sub-/supertyping relationship is not the same as whether a type can be explicitly cast from one to another.
</Class>

Some helper methods are then defined in terms of this low-level [`order()`](#qiskit.circuit.classical.types.order "qiskit.circuit.classical.types.order") primitive:

#### is\_subtype

<Function id="qiskit.circuit.classical.types.is_subtype" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L94-L114" signature="qiskit.circuit.classical.types.is_subtype(left, right, /, strict=False)">
  Does the relation $\text{left} \le \text{right}$ hold? If there is no ordering relation between the two types, then this returns `False`. If `strict`, then the equality is also forbidden.

  **Examples**

  Check if one type is a subclass of another:

  ```python
  >>> from qiskit.circuit.classical import types
  >>> types.is_subtype(types.Uint(8), types.Uint(16))
  True
  ```

  Check if one type is a strict subclass of another:

  ```python
  >>> types.is_subtype(types.Bool(), types.Bool())
  True
  >>> types.is_subtype(types.Bool(), types.Bool(), strict=True)
  False
  ```

  **Parameters**

  *   **left** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **right** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **strict** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) –

  **Return type**

  [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
</Function>

#### is\_supertype

<Function id="qiskit.circuit.classical.types.is_supertype" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L117-L137" signature="qiskit.circuit.classical.types.is_supertype(left, right, /, strict=False)">
  Does the relation $\text{left} \ge \text{right}$ hold? If there is no ordering relation between the two types, then this returns `False`. If `strict`, then the equality is also forbidden.

  **Examples**

  Check if one type is a superclass of another:

  ```python
  >>> from qiskit.circuit.classical import types
  >>> types.is_supertype(types.Uint(8), types.Uint(16))
  False
  ```

  Check if one type is a strict superclass of another:

  ```python
  >>> types.is_supertype(types.Bool(), types.Bool())
  True
  >>> types.is_supertype(types.Bool(), types.Bool(), strict=True)
  False
  ```

  **Parameters**

  *   **left** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **right** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **strict** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")) –

  **Return type**

  [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
</Function>

#### greater

<Function id="qiskit.circuit.classical.types.greater" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L140-L163" signature="qiskit.circuit.classical.types.greater(left, right, /)">
  Get the greater of the two types, assuming that there is an ordering relation between them. Technically, this is a slightly restricted version of the concept of the ‘meet’ of the two types in that the return value must be one of the inputs. In practice in the type system there is no concept of a ‘sum’ type, so the ‘meet’ exists if and only if there is an ordering between the two types, and is equal to the greater of the two types.

  **Returns**

  The greater of the two types.

  **Raises**

  [**TypeError**](https://docs.python.org/3/library/exceptions.html#TypeError "(in Python v3.13)") – if there is no ordering relation between the two types.

  **Parameters**

  *   **left** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **right** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –

  **Return type**

  [*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")

  **Examples**

  Find the greater of two [`Uint`](#qiskit.circuit.classical.types.Uint "qiskit.circuit.classical.types.Uint") types:

  ```python
  >>> from qiskit.circuit.classical import types
  >>> types.greater(types.Uint(8), types.Uint(16))
  types.Uint(16)
  ```
</Function>

### Casting between types

It is common to need to cast values of one type to another type. The casting rules for this are embedded into the [`types`](https://docs.python.org/3/library/types.html#module-types "(in Python v3.13)") module. You can query the casting kinds using [`cast_kind()`](#qiskit.circuit.classical.types.cast_kind "qiskit.circuit.classical.types.cast_kind"):

#### cast\_kind

<Function id="qiskit.circuit.classical.types.cast_kind" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L207-L229" signature="qiskit.circuit.classical.types.cast_kind(from_, to_, /)">
  Determine the sort of cast that is required to move from the left type to the right type.

  **Examples**

  ```python
  >>> from qiskit.circuit.classical import types
  >>> types.cast_kind(types.Bool(), types.Bool())
  <CastKind.EQUAL: 1>
  >>> types.cast_kind(types.Uint(8), types.Bool())
  <CastKind.IMPLICIT: 2>
  >>> types.cast_kind(types.Bool(), types.Uint(8))
  <CastKind.LOSSLESS: 3>
  >>> types.cast_kind(types.Uint(16), types.Uint(8))
  <CastKind.DANGEROUS: 4>
  ```

  **Parameters**

  *   **from\_** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –
  *   **to\_** ([*Type*](#qiskit.circuit.classical.types.Type "qiskit.circuit.classical.types.types.Type")) –

  **Return type**

  [*CastKind*](#qiskit.circuit.classical.types.CastKind "qiskit.circuit.classical.types.ordering.CastKind")
</Function>

The return values from this function are an enumeration explaining the types of cast that are allowed from the left type to the right type.

Note that casts between [`Float`](#qiskit.circuit.classical.types.Float "qiskit.circuit.classical.types.Float") and [`Uint`](#qiskit.circuit.classical.types.Uint "qiskit.circuit.classical.types.Uint") are considered dangerous in either direction, and must be done explicitly.

#### CastKind

<Class id="qiskit.circuit.classical.types.CastKind" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/classical/types/ordering.py#L166-L182" signature="qiskit.circuit.classical.types.CastKind(value)" modifiers="class">
  Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum "(in Python v3.13)")

  A return value indicating the type of cast that can occur from one type to another.
</Class>

